fix：kaminariの翻訳を追加
・「truncate: "..."」の翻訳がなく、英単語がそのまま表示されていた

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -259,6 +259,11 @@ body {
   }
 }
 
+.page-item.disabled .page-link {
+  color: $third-color-gray !important;
+  background-color: $second-color-green !important;
+}
+
 .page-item.active .page-link {
   color: $third-color-gray !important;
   background-color: $primary-color-green !important;
